--- a/lab0/lab0.ipynb
+++ b/lab0/lab0.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "'Variant #6'"
+       "'Variant #4'"
       ]
      },
      "execution_count": 1,
@@ -18,7 +18,7 @@
     }
    ],
    "source": [
-    "N = ord(\"A\") % 10 + 1\n",
+    "N = ord(\"I\") % 10 + 1\n",
     "var = f\"Variant #{N}\"\n",
     "var"
    ]
