--- a/lab0/lab0.ipynb
+++ b/lab0/lab0.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d4fb57d1-63e7-4c26-b25f-3298e947191e",
    "metadata": {},
    "outputs": [],
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ffb17103-318a-40a0-9633-1f51bd34b850",
    "metadata": {},
    "outputs": [
@@ -603,12 +603,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[35mTest 0: Enter unsorted unsigned unique integers\u001b[0m\n",
+      "\u001B[35mTest 0: Enter unsorted unsigned unique integers\u001B[0m\n",
       "Test data:\n",
-      "\u001b[33m 10 6 7 8 99 3 2  1 5   \u001b[0m\n",
+      "\u001B[33m 10 6 7 8 99 3 2  1 5   \u001B[0m\n",
       "Expected result: \n",
       "[1, 2, 3, 5, 6, 7, 8, 10, 99]\n",
-      "\u001b[32m26 swaps were performed.\u001b[0m\n",
+      "\u001B[32m26 swaps were performed.\u001B[0m\n",
       "Actual result:\n"
      ]
     },
@@ -623,7 +623,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m26 swaps were performed.\u001b[0m\n"
+      "\u001B[32m26 swaps were performed.\u001B[0m\n"
      ]
     }
    ],
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "5dec946f-5424-46f6-9122-4498fd5b174f",
    "metadata": {},
    "outputs": [
@@ -641,12 +641,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[35mTest 1: Enter unsorted unsigned duplicate integers\u001b[0m\n",
+      "\u001B[35mTest 1: Enter unsorted unsigned duplicate integers\u001B[0m\n",
       "Test data:\n",
-      "\u001b[33m 8 8    7 7 6 6 3 1 2\u001b[0m\n",
+      "\u001B[33m 8 8    7 7 6 6 3 1 2\u001B[0m\n",
       "Expected result: \n",
       "[1, 2, 3, 6, 6, 7, 7, 8, 8]\n",
-      "\u001b[32m32 swaps were performed.\u001b[0m\n",
+      "\u001B[32m32 swaps were performed.\u001B[0m\n",
       "Actual result:\n"
      ]
     },
@@ -654,14 +654,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "  8 8    7 7 6 6 3 1 2\n"
+      "  8 8 7 7 6 6 3 1 2\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m32 swaps were performed.\u001b[0m\n"
+      "\u001B[32m32 swaps were performed.\u001B[0m\n"
      ]
     }
    ],
@@ -679,12 +679,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[35mTest 2: Enter unsorted signed unique integers\u001b[0m\n",
+      "\u001B[35mTest 2: Enter unsorted signed unique integers\u001B[0m\n",
       "Test data:\n",
-      "\u001b[33m-100 +50 +0  -400 +500 +1000 -2 \u001b[0m\n",
+      "\u001B[33m-100 +50 +0  -400 +500 +1000 -2 \u001B[0m\n",
       "Expected result: \n",
       "[-400, -100, -2, 0, 50, 500, 1000]\n",
-      "\u001b[32m8 swaps were performed.\u001b[0m\n",
+      "\u001B[32m8 swaps were performed.\u001B[0m\n",
       "Actual result:\n"
      ]
     },
@@ -699,7 +699,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m8 swaps were performed.\u001b[0m\n"
+      "\u001B[32m8 swaps were performed.\u001B[0m\n"
      ]
     }
    ],
@@ -717,12 +717,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[35mTest 3: Enter sorted unsigned unique integers\u001b[0m\n",
+      "\u001B[35mTest 3: Enter sorted unsigned unique integers\u001B[0m\n",
       "Test data:\n",
-      "\u001b[33m1 2\u001b[0m\n",
+      "\u001B[33m1 2\u001B[0m\n",
       "Expected result: \n",
       "[1, 2]\n",
-      "\u001b[32m0 swaps were performed.\u001b[0m\n",
+      "\u001B[32m0 swaps were performed.\u001B[0m\n",
       "Actual result:\n"
      ]
     },
@@ -737,7 +737,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m0 swaps were performed.\u001b[0m\n"
+      "\u001B[32m0 swaps were performed.\u001B[0m\n"
      ]
     }
    ],
@@ -755,12 +755,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[35mTest 4: Enter sorted unsigned one integer\u001b[0m\n",
+      "\u001B[35mTest 4: Enter sorted unsigned one integer\u001B[0m\n",
       "Test data:\n",
-      "\u001b[33m10\u001b[0m\n",
+      "\u001B[33m10\u001B[0m\n",
       "Expected result: \n",
       "[10]\n",
-      "\u001b[32m0 swaps were performed.\u001b[0m\n",
+      "\u001B[32m0 swaps were performed.\u001B[0m\n",
       "Actual result:\n"
      ]
     },
@@ -775,7 +775,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m0 swaps were performed.\u001b[0m\n"
+      "\u001B[32m0 swaps were performed.\u001B[0m\n"
      ]
     }
    ],
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "a97fa54a-83cf-4426-905d-329676251ab2",
    "metadata": {},
    "outputs": [
@@ -793,12 +793,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[35mTest 5: Enter unsorted unsigned unique integers with leading zeroes\u001b[0m\n",
+      "\u001B[35mTest 5: Enter unsorted unsigned unique integers with leading zeroes\u001B[0m\n",
       "Test data:\n",
-      "\u001b[33m02 09 04 0100 01\u001b[0m\n",
+      "\u001B[33m02 09 04 0100 01\u001B[0m\n",
       "Expected result: \n",
       "[1, 2, 4, 9, 100]\n",
-      "\u001b[32m5 swaps were performed.\u001b[0m\n",
+      "\u001B[32m5 swaps were performed.\u001B[0m\n",
       "Actual result:\n"
      ]
     },
@@ -813,12 +813,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m5 swaps were performed.\u001b[0m\n"
+      "\u001B[32m5 swaps were performed.\u001B[0m\n"
      ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 02 09 04 0100 01\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[32m5 swaps were performed.\u001B[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "([1, 2, 4, 9, 100], 5)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "test(5)"
+    "test(5)\n",
+    "bubble_sorting()"
    ]
   },
   {
@@ -831,11 +856,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[35mTest 6: Enter unsorted unsigned unique floats\u001b[0m\n",
+      "\u001B[35mTest 6: Enter unsorted unsigned unique floats\u001B[0m\n",
       "Test data:\n",
-      "\u001b[33m9.9 0.1 3.0\u001b[0m\n",
+      "\u001B[33m9.9 0.1 3.0\u001B[0m\n",
       "Expected result: \n",
-      "\u001b[31mValue error: Values must be space-separated integers. Try again!\u001b[0m\n",
+      "\u001B[31mValue error: Values must be space-separated integers. Try again!\u001B[0m\n",
       "Actual result:\n"
      ]
     },
@@ -850,7 +875,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mValue error: Values must be space-separated integers. Try again!\u001b[0m\n"
+      "\u001B[31mValue error: Values must be space-separated integers. Try again!\u001B[0m\n"
      ]
     }
    ],
@@ -868,11 +893,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[35mTest 7: Enter empty string\u001b[0m\n",
+      "\u001B[35mTest 7: Enter empty string\u001B[0m\n",
       "Test data:\n",
-      "\u001b[33m\u001b[0m\n",
+      "\u001B[33m\u001B[0m\n",
       "Expected result: \n",
-      "\u001b[31mValue error: Values must be space-separated integers. Try again!\u001b[0m\n",
+      "\u001B[31mValue error: Values must be space-separated integers. Try again!\u001B[0m\n",
       "Actual result:\n"
      ]
     },
@@ -887,7 +912,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mValue error: Values must be space-separated integers. Try again!\u001b[0m\n"
+      "\u001B[31mValue error: Values must be space-separated integers. Try again!\u001B[0m\n"
      ]
     }
    ],
@@ -905,11 +930,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[35mTest 8: Enter alphabetic values\u001b[0m\n",
+      "\u001B[35mTest 8: Enter alphabetic values\u001B[0m\n",
       "Test data:\n",
-      "\u001b[33mAbCd 09\u001b[0m\n",
+      "\u001B[33mAbCd 09\u001B[0m\n",
       "Expected result: \n",
-      "\u001b[31mValue error: Values must be space-separated integers. Try again!\u001b[0m\n",
+      "\u001B[31mValue error: Values must be space-separated integers. Try again!\u001B[0m\n",
       "Actual result:\n"
      ]
     },
@@ -924,7 +949,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mValue error: Values must be space-separated integers. Try again!\u001b[0m\n"
+      "\u001B[31mValue error: Values must be space-separated integers. Try again!\u001B[0m\n"
      ]
     }
    ],
@@ -942,11 +967,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[35mTest 9: Enter special characters\u001b[0m\n",
+      "\u001B[35mTest 9: Enter special characters\u001B[0m\n",
       "Test data:\n",
-      "\u001b[33m% 56 7 8 !@#$%^&*()_+\"\u001b[0m\n",
+      "\u001B[33m% 56 7 8 !@#$%^&*()_+\"\u001B[0m\n",
       "Expected result: \n",
-      "\u001b[31mValue error: Values must be space-separated integers. Try again!\u001b[0m\n",
+      "\u001B[31mValue error: Values must be space-separated integers. Try again!\u001B[0m\n",
       "Actual result:\n"
      ]
     },
@@ -961,7 +986,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mValue error: Values must be space-separated integers. Try again!\u001b[0m\n"
+      "\u001B[31mValue error: Values must be space-separated integers. Try again!\u001B[0m\n"
      ]
     }
    ],
