--- a/lab0/lab0.ipynb
+++ b/lab0/lab0.ipynb
@@ -25,62 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "baaf953c-613c-4e58-a9d6-09aeefb6d392",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<!DOCTYPE html>\n",
-       "<html lang=\"en\">\n",
-       "<head>\n",
-       "    <meta charset=\"UTF-8\">\n",
-       "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
-       "    <link href=\"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css\" rel=\"stylesheet\">\n",
-       "    <script src=\"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js\"></script>\n",
-       "</head>\n",
-       "<body>\n",
-       "\n",
-       "<h1 class=\"text-body-secondary fs-1 fw-bold mx-5 my-5\">\n",
-       "    Republic of\n",
-       "    <span class=\"text-danger\">Dj</span><span class=\"text-success\">ibo</span><span class=\"text-info\">uti</span>\n",
-       "    <a class=\"link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover\"\n",
-       "       href=\"https://en.wikipedia.org/wiki/Djibouti\">🔗</a>\n",
-       "</h1>\n",
-       "\n",
-       "<div class=\"d-flex flex-column justify-content-start align-items-center my-5 mx-5 border border-4 border-light-subtle\">\n",
-       "    <div class=\"mx-5 my-5\">\n",
-       "        <a class=\"link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold\"\n",
-       "           href=\"https://en.wikipedia.org/wiki/Flag_of_Djibouti\" target=\"_blank\">\n",
-       "            <div class=\"border border-light-subtle\">\n",
-       "                <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"1039.23\" height=\"600\">\n",
-       "                    <path fill=\"#6ab2e7\" d=\"M0 0h1039.23048v600H0z\"/>\n",
-       "                    <path fill=\"#12ad2b\" d=\"M0 300h1039.23048v300H0z\"/>\n",
-       "                    <path fill=\"#fff\" d=\"M0 0v600l259.808-150 259.807-150-259.807-150z\"/>\n",
-       "                    <path fill=\"#d7141a\"\n",
-       "                          d=\"M198.86 225l18.616 57.295h60.243l-48.738 35.41L247.598 375l-48.738-35.41L150.122 375l18.616-57.295L120 282.295h60.243z\"/>\n",
-       "                </svg>\n",
-       "            </div>\n",
-       "            <p class=\"container text-center fs-3\">Flag</p>\n",
-       "        </a>\n",
-       "    </div>\n",
-       "\n",
-       "    <div class=\"mx-5 mb-5\">\n",
-       "        <a class=\"link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold\"\n",
-       "           href=\"https://en.wikipedia.org/wiki/Emblem_of_Djibouti\" target=\"_blank\">\n",
-       "            <img src=\"https://upload.wikimedia.org/wikipedia/commons/8/8d/Emblem_of_Djibouti.svg\"\n",
-       "                 width=\"450\" height=\"600\" alt=\"Emblem of Djibouti\">\n",
-       "            <p class=\"container text-center fs-3\">Emblem of Djibouti</p>\n",
-       "        </a>\n",
-       "    </div>\n",
-       "</div>\n",
-       "</body>\n",
-       "</html>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<!DOCTYPE html>\n<html lang=\"en\">\n<head>\n    <meta charset=\"UTF-8\">\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n    <link href=\"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css\" rel=\"stylesheet\">\n    <script src=\"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js\"></script>\n</head>\n<body>\n\n<h1 class=\"text-body-secondary fs-1 fw-bold mx-5 my-5\">\n    Republic of\n    <span class=\"text-danger\">Dj</span><span class=\"text-success\">ibo</span><span class=\"text-info\">uti</span>\n    <a class=\"link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover\"\n       href=\"https://en.wikipedia.org/wiki/Djibouti\">🔗</a>\n</h1>\n\n<div class=\"d-flex flex-column justify-content-start align-items-center my-5 mx-5 border border-4 border-light-subtle\">\n    <div class=\"mx-5 my-5\">\n        <a class=\"link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold\"\n           href=\"https://en.wikipedia.org/wiki/Flag_of_Djibouti\" target=\"_blank\">\n            <div class=\"border border-light-subtle\">\n                <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"1039.23\" height=\"600\">\n                    <path fill=\"#6ab2e7\" d=\"M0 0h1039.23048v600H0z\"/>\n                    <path fill=\"#12ad2b\" d=\"M0 300h1039.23048v300H0z\"/>\n                    <path fill=\"#fff\" d=\"M0 0v600l259.808-150 259.807-150-259.807-150z\"/>\n                    <path fill=\"#d7141a\"\n                          d=\"M198.86 225l18.616 57.295h60.243l-48.738 35.41L247.598 375l-48.738-35.41L150.122 375l18.616-57.295L120 282.295h60.243z\"/>\n                </svg>\n            </div>\n            <p class=\"container text-center fs-3\">Flag</p>\n        </a>\n    </div>\n\n    <div class=\"mx-5 mb-5\">\n        <a class=\"link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold\"\n           href=\"https://en.wikipedia.org/wiki/Emblem_of_Djibouti\" target=\"_blank\">\n            <img src=\"https://upload.wikimedia.org/wikipedia/commons/8/8d/Emblem_of_Djibouti.svg\"\n                 width=\"450\" height=\"600\" alt=\"Emblem of Djibouti\">\n            <p class=\"container text-center fs-3\">Emblem of Djibouti</p>\n        </a>\n    </div>\n</div>\n</body>\n</html>\n"
      },
      "metadata": {},
      "output_type": "display_data"
