--- a/lab0/lab0.ipynb
+++ b/lab0/lab0.ipynb
@@ -25,14 +25,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "baaf953c-613c-4e58-a9d6-09aeefb6d392",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<!DOCTYPE html>\n<html lang=\"en\">\n<head>\n    <meta charset=\"UTF-8\">\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n    <link href=\"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css\" rel=\"stylesheet\">\n    <script src=\"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js\"></script>\n</head>\n<body>\n\n<h1 class=\"text-body-secondary fs-1 fw-bold mx-5 my-5\">\n    Republic of\n    <span class=\"text-danger\">Dj</span><span class=\"text-success\">ibo</span><span class=\"text-info\">uti</span>\n    <a class=\"link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover\"\n       href=\"https://en.wikipedia.org/wiki/Djibouti\">🔗</a>\n</h1>\n\n<div class=\"d-flex flex-column justify-content-start align-items-center my-5 mx-5 border border-4 border-light-subtle\">\n    <div class=\"mx-5 my-5\">\n        <a class=\"link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold\"\n           href=\"https://en.wikipedia.org/wiki/Flag_of_Djibouti\" target=\"_blank\">\n            <div class=\"border border-light-subtle\">\n                <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"1039.23\" height=\"600\">\n                    <path fill=\"#6ab2e7\" d=\"M0 0h1039.23048v600H0z\"/>\n                    <path fill=\"#12ad2b\" d=\"M0 300h1039.23048v300H0z\"/>\n                    <path fill=\"#fff\" d=\"M0 0v600l259.808-150 259.807-150-259.807-150z\"/>\n                    <path fill=\"#d7141a\"\n                          d=\"M198.86 225l18.616 57.295h60.243l-48.738 35.41L247.598 375l-48.738-35.41L150.122 375l18.616-57.295L120 282.295h60.243z\"/>\n                </svg>\n            </div>\n            <p class=\"container text-center fs-3\">Flag</p>\n        </a>\n    </div>\n\n    <div class=\"mx-5 mb-5\">\n        <a class=\"link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold\"\n           href=\"https://en.wikipedia.org/wiki/Emblem_of_Djibouti\" target=\"_blank\">\n            <img src=\"https://upload.wikimedia.org/wikipedia/commons/8/8d/Emblem_of_Djibouti.svg\"\n                 width=\"450\" height=\"600\" alt=\"Emblem of Djibouti\">\n            <p class=\"container text-center fs-3\">Emblem of Djibouti</p>\n        </a>\n    </div>\n</div>\n</body>\n</html>\n"
+      "text/html": [
+       "<!DOCTYPE html>\n",
+       "<html lang=\"en\">\n",
+       "<head>\n",
+       "    <meta charset=\"UTF-8\">\n",
+       "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
+       "    <link href=\"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css\" rel=\"stylesheet\">\n",
+       "    <script src=\"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js\"></script>\n",
+       "</head>\n",
+       "<body>\n",
+       "\n",
+       "<h1 class=\"text-body-secondary fs-1 fw-bold mx-5 my-5\">\n",
+       "    Republic of\n",
+       "    <span class=\"text-danger\">Dj</span><span class=\"text-success\">ibo</span><span class=\"text-info\">uti</span>\n",
+       "    <a class=\"link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover\"\n",
+       "       href=\"https://en.wikipedia.org/wiki/Djibouti\">🔗</a>\n",
+       "</h1>\n",
+       "\n",
+       "<div class=\"d-flex flex-column justify-content-start align-items-center my-5 mx-5 border border-4 border-light-subtle\">\n",
+       "    <div class=\"mx-5 my-5\">\n",
+       "        <a class=\"link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold\"\n",
+       "           href=\"https://en.wikipedia.org/wiki/Flag_of_Djibouti\" target=\"_blank\">\n",
+       "            <div class=\"border border-light-subtle\">\n",
+       "                <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"1039.23\" height=\"600\">\n",
+       "                    <path fill=\"#6ab2e7\" d=\"M0 0h1039.23048v600H0z\"/>\n",
+       "                    <path fill=\"#12ad2b\" d=\"M0 300h1039.23048v300H0z\"/>\n",
+       "                    <path fill=\"#fff\" d=\"M0 0v600l259.808-150 259.807-150-259.807-150z\"/>\n",
+       "                    <path fill=\"#d7141a\"\n",
+       "                          d=\"M198.86 225l18.616 57.295h60.243l-48.738 35.41L247.598 375l-48.738-35.41L150.122 375l18.616-57.295L120 282.295h60.243z\"/>\n",
+       "                </svg>\n",
+       "            </div>\n",
+       "            <p class=\"container text-center fs-3\">Flag</p>\n",
+       "        </a>\n",
+       "    </div>\n",
+       "\n",
+       "    <div class=\"mx-5 mb-5\">\n",
+       "        <a class=\"link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold\"\n",
+       "           href=\"https://en.wikipedia.org/wiki/Emblem_of_Djibouti\" target=\"_blank\">\n",
+       "            <img src=\"https://upload.wikimedia.org/wikipedia/commons/8/8d/Emblem_of_Djibouti.svg\"\n",
+       "                 width=\"450\" height=\"600\" alt=\"Emblem of Djibouti\">\n",
+       "            <p class=\"container text-center fs-3\">Emblem of Djibouti</p>\n",
+       "        </a>\n",
+       "    </div>\n",
+       "</div>\n",
+       "</body>\n",
+       "</html>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -422,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d4fb57d1-63e7-4c26-b25f-3298e947191e",
    "metadata": {},
    "outputs": [],
@@ -547,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ffb17103-318a-40a0-9633-1f51bd34b850",
    "metadata": {},
    "outputs": [
@@ -555,12 +603,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[35mTest 0: Enter unsorted unsigned unique integers\u001B[0m\n",
+      "\u001b[35mTest 0: Enter unsorted unsigned unique integers\u001b[0m\n",
       "Test data:\n",
-      "\u001B[33m 10 6 7 8 99 3 2  1 5   \u001B[0m\n",
+      "\u001b[33m 10 6 7 8 99 3 2  1 5   \u001b[0m\n",
       "Expected result: \n",
       "[1, 2, 3, 5, 6, 7, 8, 10, 99]\n",
-      "\u001B[32m26 swaps were performed.\u001B[0m\n",
+      "\u001b[32m26 swaps were performed.\u001b[0m\n",
       "Actual result:\n"
      ]
     },
@@ -575,7 +623,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[32m26 swaps were performed.\u001B[0m\n"
+      "\u001b[32m26 swaps were performed.\u001b[0m\n"
      ]
     }
    ],
@@ -585,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5dec946f-5424-46f6-9122-4498fd5b174f",
    "metadata": {},
    "outputs": [
@@ -593,12 +641,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[35mTest 1: Enter unsorted unsigned duplicate integers\u001B[0m\n",
+      "\u001b[35mTest 1: Enter unsorted unsigned duplicate integers\u001b[0m\n",
       "Test data:\n",
-      "\u001B[33m 8 8    7 7 6 6 3 1 2\u001B[0m\n",
+      "\u001b[33m 8 8    7 7 6 6 3 1 2\u001b[0m\n",
       "Expected result: \n",
       "[1, 2, 3, 6, 6, 7, 7, 8, 8]\n",
-      "\u001B[32m32 swaps were performed.\u001B[0m\n",
+      "\u001b[32m32 swaps were performed.\u001b[0m\n",
       "Actual result:\n"
      ]
     },
@@ -606,14 +654,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "  8 8 7 7 6 6 3 1 2\n"
+      "  8 8    7 7 6 6 3 1 2\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[32m32 swaps were performed.\u001B[0m\n"
+      "\u001b[32m32 swaps were performed.\u001b[0m\n"
      ]
     }
    ],
@@ -631,12 +679,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[35mTest 2: Enter unsorted signed unique integers\u001B[0m\n",
+      "\u001b[35mTest 2: Enter unsorted signed unique integers\u001b[0m\n",
       "Test data:\n",
-      "\u001B[33m-100 +50 +0  -400 +500 +1000 -2 \u001B[0m\n",
+      "\u001b[33m-100 +50 +0  -400 +500 +1000 -2 \u001b[0m\n",
       "Expected result: \n",
       "[-400, -100, -2, 0, 50, 500, 1000]\n",
-      "\u001B[32m8 swaps were performed.\u001B[0m\n",
+      "\u001b[32m8 swaps were performed.\u001b[0m\n",
       "Actual result:\n"
      ]
     },
@@ -651,7 +699,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[32m8 swaps were performed.\u001B[0m\n"
+      "\u001b[32m8 swaps were performed.\u001b[0m\n"
      ]
     }
    ],
@@ -669,12 +717,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[35mTest 3: Enter sorted unsigned unique integers\u001B[0m\n",
+      "\u001b[35mTest 3: Enter sorted unsigned unique integers\u001b[0m\n",
       "Test data:\n",
-      "\u001B[33m1 2\u001B[0m\n",
+      "\u001b[33m1 2\u001b[0m\n",
       "Expected result: \n",
       "[1, 2]\n",
-      "\u001B[32m0 swaps were performed.\u001B[0m\n",
+      "\u001b[32m0 swaps were performed.\u001b[0m\n",
       "Actual result:\n"
      ]
     },
@@ -689,7 +737,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[32m0 swaps were performed.\u001B[0m\n"
+      "\u001b[32m0 swaps were performed.\u001b[0m\n"
      ]
     }
    ],
@@ -707,12 +755,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[35mTest 4: Enter sorted unsigned one integer\u001B[0m\n",
+      "\u001b[35mTest 4: Enter sorted unsigned one integer\u001b[0m\n",
       "Test data:\n",
-      "\u001B[33m10\u001B[0m\n",
+      "\u001b[33m10\u001b[0m\n",
       "Expected result: \n",
       "[10]\n",
-      "\u001B[32m0 swaps were performed.\u001B[0m\n",
+      "\u001b[32m0 swaps were performed.\u001b[0m\n",
       "Actual result:\n"
      ]
     },
@@ -727,7 +775,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[32m0 swaps were performed.\u001B[0m\n"
+      "\u001b[32m0 swaps were performed.\u001b[0m\n"
      ]
     }
    ],
@@ -737,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "a97fa54a-83cf-4426-905d-329676251ab2",
    "metadata": {},
    "outputs": [
@@ -745,12 +793,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[35mTest 5: Enter unsorted unsigned unique integers with leading zeroes\u001B[0m\n",
+      "\u001b[35mTest 5: Enter unsorted unsigned unique integers with leading zeroes\u001b[0m\n",
       "Test data:\n",
-      "\u001B[33m02 09 04 0100 01\u001B[0m\n",
+      "\u001b[33m02 09 04 0100 01\u001b[0m\n",
       "Expected result: \n",
       "[1, 2, 4, 9, 100]\n",
-      "\u001B[32m5 swaps were performed.\u001B[0m\n",
+      "\u001b[32m5 swaps were performed.\u001b[0m\n",
       "Actual result:\n"
      ]
     },
@@ -765,37 +813,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[32m5 swaps were performed.\u001B[0m\n"
+      "\u001b[32m5 swaps were performed.\u001b[0m\n"
      ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " 02 09 04 0100 01\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001B[32m5 swaps were performed.\u001B[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "([1, 2, 4, 9, 100], 5)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "test(5)\n",
-    "bubble_sorting()"
+    "test(5)"
    ]
   },
   {
@@ -808,11 +831,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[35mTest 6: Enter unsorted unsigned unique floats\u001B[0m\n",
+      "\u001b[35mTest 6: Enter unsorted unsigned unique floats\u001b[0m\n",
       "Test data:\n",
-      "\u001B[33m9.9 0.1 3.0\u001B[0m\n",
+      "\u001b[33m9.9 0.1 3.0\u001b[0m\n",
       "Expected result: \n",
-      "\u001B[31mValue error: Values must be space-separated integers. Try again!\u001B[0m\n",
+      "\u001b[31mValue error: Values must be space-separated integers. Try again!\u001b[0m\n",
       "Actual result:\n"
      ]
     },
@@ -827,7 +850,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[31mValue error: Values must be space-separated integers. Try again!\u001B[0m\n"
+      "\u001b[31mValue error: Values must be space-separated integers. Try again!\u001b[0m\n"
      ]
     }
    ],
@@ -845,11 +868,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[35mTest 7: Enter empty string\u001B[0m\n",
+      "\u001b[35mTest 7: Enter empty string\u001b[0m\n",
       "Test data:\n",
-      "\u001B[33m\u001B[0m\n",
+      "\u001b[33m\u001b[0m\n",
       "Expected result: \n",
-      "\u001B[31mValue error: Values must be space-separated integers. Try again!\u001B[0m\n",
+      "\u001b[31mValue error: Values must be space-separated integers. Try again!\u001b[0m\n",
       "Actual result:\n"
      ]
     },
@@ -864,7 +887,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[31mValue error: Values must be space-separated integers. Try again!\u001B[0m\n"
+      "\u001b[31mValue error: Values must be space-separated integers. Try again!\u001b[0m\n"
      ]
     }
    ],
@@ -882,11 +905,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[35mTest 8: Enter alphabetic values\u001B[0m\n",
+      "\u001b[35mTest 8: Enter alphabetic values\u001b[0m\n",
       "Test data:\n",
-      "\u001B[33mAbCd 09\u001B[0m\n",
+      "\u001b[33mAbCd 09\u001b[0m\n",
       "Expected result: \n",
-      "\u001B[31mValue error: Values must be space-separated integers. Try again!\u001B[0m\n",
+      "\u001b[31mValue error: Values must be space-separated integers. Try again!\u001b[0m\n",
       "Actual result:\n"
      ]
     },
@@ -901,7 +924,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[31mValue error: Values must be space-separated integers. Try again!\u001B[0m\n"
+      "\u001b[31mValue error: Values must be space-separated integers. Try again!\u001b[0m\n"
      ]
     }
    ],
@@ -919,11 +942,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[35mTest 9: Enter special characters\u001B[0m\n",
+      "\u001b[35mTest 9: Enter special characters\u001b[0m\n",
       "Test data:\n",
-      "\u001B[33m% 56 7 8 !@#$%^&*()_+\"\u001B[0m\n",
+      "\u001b[33m% 56 7 8 !@#$%^&*()_+\"\u001b[0m\n",
       "Expected result: \n",
-      "\u001B[31mValue error: Values must be space-separated integers. Try again!\u001B[0m\n",
+      "\u001b[31mValue error: Values must be space-separated integers. Try again!\u001b[0m\n",
       "Actual result:\n"
      ]
     },
@@ -938,7 +961,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[31mValue error: Values must be space-separated integers. Try again!\u001B[0m\n"
+      "\u001b[31mValue error: Values must be space-separated integers. Try again!\u001b[0m\n"
      ]
     }
    ],
