--- a/lab1/Lab1_RepeshkoIV_CS-222a.ipynb
+++ b/lab1/Lab1_RepeshkoIV_CS-222a.ipynb
@@ -349,13 +349,12 @@
     "Task 5. Calculate the number of tanks destroyed in the spring of 2023.\n",
     "\"\"\"\n",
     "dates = extract_csv_data(FILE_PATH, COLUMN_NAME[1])[::-1]\n",
+    "start_index, end_index = np.where(dates == np.datetime64('2023-03-01'))[0][0], np.where(dates == np.datetime64('2023-06-01'))[0][0]\n",
     "\n",
     "\"\"\"\n",
     "Approach 1: Calculation of losses for the period \n",
     "as the difference between the cumulative losses at the beginning and end of the period.\n",
     "\"\"\"\n",
-    "start_index, end_index = np.where(dates == np.datetime64('2023-03-01'))[0][0], \\\n",
-    "np.where(dates == np.datetime64('2023-06-01'))[0][0]\n",
     "spring_2023_losses_a1 = losses[end_index] - losses[start_index]\n",
     "\n",
     "\"\"\"\n",
@@ -386,9 +385,9 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Task 6. Calculate the average value of destroyed tanks over the last 100 days of the war.\n",
+    "Task 6. Calculate the arithmetic average value of destroyed tanks over the last 100 days of the war.\n",
     "\"\"\"\n",
-    "last_100_days_avg_losses = np.average(daily_losses[-100:])\n",
+    "last_100_days_avg_losses = np.mean(daily_losses[-100:])\n",
     "\n",
     "last_100_days_avg_losses"
    ]
@@ -416,7 +415,6 @@
     "(starting from the last date in the dataset).\n",
     "\"\"\"\n",
     "import matplotlib.pyplot as plt\n",
-    "import re\n",
     "\n",
     "\n",
     "def plot_graph(losses, dates):\n",
@@ -486,12 +484,12 @@
     "                 annotation_clip=False,\n",
     "                 color=text_color)\n",
     "\n",
-    "    xticks = np.array([date for date in x.astype(str) if re.match(r'\\d{4}-\\d{2}-01', date)], dtype='datetime64[D]')\n",
+    "    xticks = x[np.char.endswith(x.astype(str), '-01')]\n",
     "    plt.xticks(ticks=xticks, \n",
     "               color=text_color)\n",
     "    plt.yticks(color=text_color)\n",
     "\n",
-    "    plt.savefig('russia_tank_losses.png')\n",
+    "    plt.savefig('russia_tank_losses_over_year.png')\n",
     "\n",
     "\n",
     "last_365_days_losses = daily_losses[-365:]\n",
