--- a/lab1/Lab1_RepeshkoIV_CS-222a.ipynb
+++ b/lab1/Lab1_RepeshkoIV_CS-222a.ipynb
@@ -69,7 +69,15 @@
    "execution_count": 2,
    "id": "fdbe00f6-57ef-4fc2-ba73-31e6176533df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR! Session/line number was not unique in database. History logging moved to new session 14\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Task 1. Create a function that takes a file name and a column name as a parameter \n",
@@ -99,8 +107,7 @@
     "        reader = csv.reader(file)\n",
     "        header = next(reader)\n",
     "        column_index = header.index(column_name)\n",
-    "        data_list = [np.datetime64(row[column_index]) if column_name == 'date' else int(row[column_index]) for row in\n",
-    "                     reader]\n",
+    "        data_list = [np.datetime64(row[column_index]) if column_name == 'date' else int(row[column_index]) for row in reader]\n",
     "\n",
     "    return np.array(data_list, dtype='datetime64[D]' if column_name == 'date' else int)"
    ]
@@ -336,7 +343,7 @@
     {
      "data": {
       "text/plain": [
-       "(np.int64(409), np.int64(409))"
+       "(np.int64(655), np.int64(655))"
       ]
      },
      "execution_count": 6,
@@ -349,7 +356,7 @@
     "Task 5. Calculate the number of tanks destroyed in the spring of 2023.\n",
     "\"\"\"\n",
     "dates = extract_csv_data(FILE_PATH, COLUMN_NAME[1])[::-1]\n",
-    "start_index, end_index = np.where(dates == np.datetime64('2023-03-01'))[0][0], np.where(dates == np.datetime64('2023-06-01'))[0][0]\n",
+    "start_index, end_index = np.where(np.isin(dates, [np.datetime64('2023-06-01'), np.datetime64('2023-09-01')]))[0]\n",
     "\n",
     "\"\"\"\n",
     "Approach 1: Calculation of losses for the period \n",
@@ -492,9 +499,7 @@
     "    plt.savefig('russia_tank_losses_over_year.png')\n",
     "\n",
     "\n",
-    "last_365_days_losses = daily_losses[-365:]\n",
-    "last_365_days_dates = dates[-365:]\n",
-    "plot_graph(last_365_days_losses, last_365_days_dates)"
+    "plot_graph(daily_losses[-365:], dates[-365:])"
    ]
   }
  ],
