--- a/lab3/Lab3_RepeshkoIV_CS-222a.ipynb
+++ b/lab3/Lab3_RepeshkoIV_CS-222a.ipynb
@@ -267,7 +267,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/04/sfv_qb592px6cksyqky43yc00000gn/T/ipykernel_43082/702565932.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/04/sfv_qb592px6cksyqky43yc00000gn/T/ipykernel_25491/702565932.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  еnergy_data.replace(\"...\", np.nan, inplace=True)\n"
      ]
     },
@@ -3360,7 +3360,7 @@
    "source": [
     "## Task 9\n",
     "\n",
-    "Create a function to determine how much GDP has changed over the last 10 years for a country with the 5th highest GDP.4\n",
+    "Create a function to determine how much GDP has changed over the last 10 years for a country with the 5th highest GDP.\n",
     "\n",
     "This function should return a tuple with the name of the country and the value by which the GDP has changed."
    ]
@@ -3406,9 +3406,9 @@
    "source": [
     "## Task 10\n",
     "\n",
-    "Create a function to determine how much GDP has changed over the last 10 years for a country with the 5th highest GDP.4\n",
+    "Create a function to determine which country has a maximum renewable energy target (% Renewable) and what percentage.\n",
     "\n",
-    "This function should return a tuple with the name of the country and the value by which the GDP has changed."
+    "This function should return a tuple with the name of the country and the percentage."
    ]
   },
   {
